// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<message> demo: > render [basic] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Info Message
</button>
`;

exports[`<message> demo: > render [closeable] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Closeable Message
</button>
`;

exports[`<message> demo: > render [icon] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Info Message
</button>
`;

exports[`<message> demo: > render [position] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Top Message
    </button></div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Bottom Message
    </button></div>
</div>
`;

exports[`<message> demo: > render [type] correctly 1`] = `
<div>
  <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Info Message
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-success" type="button">
        <!--v-if-->Success Message
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-warning" type="button">
        <!--v-if-->Warning Message
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-danger" type="button">
        <!--v-if-->Error Message
      </button></div>
  </div>
</div>
<div class="sd:mt-5">
  <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Normal Message
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if-->Normal Message With Icon
      </button></div>
    <!---->
    <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-primary" type="button">
        <!--v-if-->Loading Message
      </button></div>
  </div>
</div>
`;

exports[`<message> demo: > render [update] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Update Info Message
</button>
`;
